# FalloutCast

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
data/: targets_conus.geojson
docs/: HANDOFF.md  PRD.md  SESSION_HANDOFF.md  TARGET_DECK.md  TIER1_SPEC.md
scripts/: validate_castle_bravo.py  validate_footprint.py  validate_idealized_pattern.py
src/falloutcast/: contour.py  exposure.py  grid.py  scenario.py  schemas.py  targetdeck.py  targets.py
src/falloutcast/api/: main.py
src/falloutcast/physics/: __init__.py  atmosphere.py  decay.py  ensemble.py  fallvelocity.py  sizedist.py  tier1.py  units.py  wseg10.py
src/falloutcast/validation/: __init__.py  castle_bravo.py  idealized_pattern.py  reference_cases.py
src/falloutcast/weather/: openmeteo.py
tests/: test_castle_bravo.py  test_dataset.py  test_ensemble.py  test_exchange_envelope.py  test_exposure.py  test_footprint_validation_harness.py  test_idealized_pattern.py  test_openmeteo.py  test_scenario.py  test_sizedist.py  test_targetdeck.py  test_tier1.py  test_wseg10.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  decay.ts  env.d.ts  main.ts  style.css
