[project]
name = "falloutcast"
version = "0.1.0"
description = "Weather-driven nuclear fallout visualization (WSEG-10 Tier-0)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "contourpy>=1.2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
